--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -7,9 +7,28 @@
     "extends": ["eslint:recommended", "prettier"],
     "env": {
         "es2021": true,
-        "node": true
+        "node": true,
+        "commonjs": true,
+        "browser": true,
+        "es6": true
     },
     "rules": {
-        "no-console": "error"
+        "prettier/prettier": "error",
+        "spaced-comment": "off",
+        "no-console": "warn",
+        "consistent-return": "off",
+        "func-names": "off",
+        "object-shorthand": "off",
+        "no-process-exit": "off",
+        "no-param-reassign": "off",
+        "no-return-await": "off",
+        "no-underscore-dangle": "off",
+        "class-methods-use-this": "off",
+        "prefer-destructuring": ["error", { "object": true, "array": false }],
+        "no-unused-vars": ["error", { "argsIgnorePattern": "req|res|next|val" }]
+    },
+    "globals": {
+        "process": true,
+        "__dirname": true
     }
 }
